# dsba-itop2022-hw

FifaPlayers/: CMakeLists.txt  main.cpp
FifaPlayers/Application/: application.cpp  application.h  application.ui
FifaPlayers/CreateRowDialog/: adddialog.cpp  adddialog.h  adddialog.ui
FifaPlayers/DialogWindow/: dialog.cpp  dialog.h  dialog.ui
FifaPlayers/TableModel/: tablemodel.cpp  tablemodel.h
data/: Top_650_FIFA.csv
